finishing the app

--- a/app/src/main/res/layout/item_create_city.xml
+++ b/app/src/main/res/layout/item_create_city.xml
@@ -3,35 +3,51 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/cardViewBg"
+            >
 
             <ImageView
                 android:id="@+id/icon"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
+                android:layout_alignParentTop="true"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
-                android:contentDescription="@string/place_chosen"
+                android:contentDescription="@string/placeChosen"
                 android:src="@drawable/ic_place_black" />
+
+            <ImageView
+                android:id="@+id/delete"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_delete_black"
+                />
 
             <TextView
                 android:id="@+id/cityNameText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/icon"
                 android:layout_centerVertical="true"
-                android:textSize="20sp"
+                android:layout_marginStart="15dp"
+                android:layout_toEndOf="@id/icon"
+                android:textSize="24sp"
                 android:textStyle="bold"
                 tools:text="Paris" />
 
