endeing the app

--- a/app/src/main/res/menu/fragment_city.xml
+++ b/app/src/main/res/menu/fragment_city.xml
@@ -2,9 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item  android:id="@+id/locationCreate"
+        android:icon="@android:drawable/ic_menu_mylocation"
+        android:title="@string/addLocalition"
+        app:showAsAction="always" />
+
     <item android:id="@+id/actionCreateCity"
         android:icon="@drawable/ic_add_circle_outline_whit"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:title="@string/menuCreateCity"
         />
 
